Wait to write out the permissions file until after 2 seconds of inactivity, to speed up deleting of losts of entries. bug 236641, r=dwitte, sr=darin, a=dveditz